--- a/ETL_Mini_Project_Starter_Code.ipynb
+++ b/ETL_Mini_Project_Starter_Code.ipynb
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2240,7 @@
        "      <td>CA</td>\n",
        "      <td>CAD</td>\n",
        "      <td>1970-01-01 00:00:01.581573600</td>\n",
-       "      <td>1614578400</td>\n",
+       "      <td>2021-03-01</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>food/food trucks</td>\n",
@@ -2260,7 +2260,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.611554400</td>\n",
-       "      <td>1621918800</td>\n",
+       "      <td>2021-05-25</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>music/rock</td>\n",
@@ -2280,7 +2280,7 @@
        "      <td>AU</td>\n",
        "      <td>AUD</td>\n",
        "      <td>1970-01-01 00:00:01.608184800</td>\n",
-       "      <td>1640844000</td>\n",
+       "      <td>2021-12-30</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>technology/web</td>\n",
@@ -2300,7 +2300,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.634792400</td>\n",
-       "      <td>1642399200</td>\n",
+       "      <td>2022-01-17</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>music/rock</td>\n",
@@ -2320,7 +2320,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.608530400</td>\n",
-       "      <td>1629694800</td>\n",
+       "      <td>2021-08-23</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
@@ -2360,7 +2360,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.609221600</td>\n",
-       "      <td>1622350800</td>\n",
+       "      <td>2021-05-30</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>food/food trucks</td>\n",
@@ -2380,7 +2380,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.634274000</td>\n",
-       "      <td>1638252000</td>\n",
+       "      <td>2021-11-30</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
@@ -2400,7 +2400,7 @@
        "      <td>IT</td>\n",
        "      <td>EUR</td>\n",
        "      <td>1970-01-01 00:00:01.636174800</td>\n",
-       "      <td>1639116000</td>\n",
+       "      <td>2021-12-10</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
@@ -2420,7 +2420,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.602133200</td>\n",
-       "      <td>1618117200</td>\n",
+       "      <td>2021-04-11</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>music/indie rock</td>\n",
@@ -2440,7 +2440,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.609308000</td>\n",
-       "      <td>1629262800</td>\n",
+       "      <td>2021-08-18</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>food/food trucks</td>\n",
@@ -2493,17 +2493,17 @@
        "999    canceled           1122      US      USD 1970-01-01 00:00:01.609308000   \n",
        "\n",
        "       end_date  staff_pick  spotlight category & sub-category    category  \\\n",
-       "0    1614578400       False      False        food/food trucks        food   \n",
-       "1    1621918800       False       True              music/rock       music   \n",
-       "2    1640844000       False      False          technology/web  technology   \n",
-       "3    1642399200       False      False              music/rock       music   \n",
-       "4    1629694800       False      False           theater/plays     theater   \n",
+       "0    2021-03-01       False      False        food/food trucks        food   \n",
+       "1    2021-05-25       False       True              music/rock       music   \n",
+       "2    2021-12-30       False      False          technology/web  technology   \n",
+       "3    2022-01-17       False      False              music/rock       music   \n",
+       "4    2021-08-23       False      False           theater/plays     theater   \n",
        "..          ...         ...        ...                     ...         ...   \n",
-       "995  1622350800       False       True        food/food trucks        food   \n",
-       "996  1638252000       False      False           theater/plays     theater   \n",
-       "997  1639116000       False      False           theater/plays     theater   \n",
-       "998  1618117200       False       True        music/indie rock       music   \n",
-       "999  1629262800       False      False        food/food trucks        food   \n",
+       "995  2021-05-30       False       True        food/food trucks        food   \n",
+       "996  2021-11-30       False      False           theater/plays     theater   \n",
+       "997  2021-12-10       False      False           theater/plays     theater   \n",
+       "998  2021-04-11       False       True        music/indie rock       music   \n",
+       "999  2021-08-18       False      False        food/food trucks        food   \n",
        "\n",
        "     subcategory  \n",
        "0    food trucks  \n",
@@ -2521,7 +2521,7 @@
        "[1000 rows x 17 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2530,12 +2530,13 @@
     "# Format the launched_date and end_date columns to datetime format\n",
     "from datetime import datetime as dt\n",
     "campaign_df[\"launched_date\"] = pd.to_datetime(campaign_df[\"launched_date\"])\n",
+    "campaign_df[\"end_date\"] = pd.to_datetime(campaign_df[\"end_date\"], unit='s').dt.strftime('%Y-%m-%d')\n",
     "campaign_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 88,
    "metadata": {
     "scrolled": false
    },
@@ -2596,7 +2597,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.623214800</td>\n",
-       "      <td>1623992400</td>\n",
+       "      <td>2021-06-18</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>film &amp; video/drama</td>\n",
@@ -2618,7 +2619,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.607493600</td>\n",
-       "      <td>1622005200</td>\n",
+       "      <td>2021-05-26</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>music/rock</td>\n",
@@ -2640,7 +2641,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.592110800</td>\n",
-       "      <td>1612850400</td>\n",
+       "      <td>2021-02-09</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>film &amp; video/drama</td>\n",
@@ -2662,7 +2663,7 @@
        "      <td>IT</td>\n",
        "      <td>EUR</td>\n",
        "      <td>1970-01-01 00:00:01.625288400</td>\n",
-       "      <td>1625720400</td>\n",
+       "      <td>2021-07-08</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>photography/photography books</td>\n",
@@ -2684,7 +2685,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.636956000</td>\n",
-       "      <td>1638856800</td>\n",
+       "      <td>2021-12-07</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>publishing/translations</td>\n",
@@ -2706,7 +2707,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.609221600</td>\n",
-       "      <td>1622350800</td>\n",
+       "      <td>2021-05-30</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>food/food trucks</td>\n",
@@ -2728,7 +2729,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.634274000</td>\n",
-       "      <td>1638252000</td>\n",
+       "      <td>2021-11-30</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
@@ -2750,7 +2751,7 @@
        "      <td>IT</td>\n",
        "      <td>EUR</td>\n",
        "      <td>1970-01-01 00:00:01.636174800</td>\n",
-       "      <td>1639116000</td>\n",
+       "      <td>2021-12-10</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
@@ -2772,7 +2773,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.602133200</td>\n",
-       "      <td>1618117200</td>\n",
+       "      <td>2021-04-11</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>music/indie rock</td>\n",
@@ -2794,7 +2795,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.609308000</td>\n",
-       "      <td>1629262800</td>\n",
+       "      <td>2021-08-18</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>food/food trucks</td>\n",
@@ -2833,16 +2834,16 @@
        "999               Expanded eco-centric policy  111100.0   62819.0    canceled   \n",
        "\n",
        "     backers_count country currency                 launched_date    end_date  \\\n",
-       "990             64      US      USD 1970-01-01 00:00:01.623214800  1623992400   \n",
-       "991            241      US      USD 1970-01-01 00:00:01.607493600  1622005200   \n",
-       "992            132      US      USD 1970-01-01 00:00:01.592110800  1612850400   \n",
-       "993             75      IT      EUR 1970-01-01 00:00:01.625288400  1625720400   \n",
-       "994            842      US      USD 1970-01-01 00:00:01.636956000  1638856800   \n",
-       "995           2043      US      USD 1970-01-01 00:00:01.609221600  1622350800   \n",
-       "996            112      US      USD 1970-01-01 00:00:01.634274000  1638252000   \n",
-       "997            139      IT      EUR 1970-01-01 00:00:01.636174800  1639116000   \n",
-       "998            374      US      USD 1970-01-01 00:00:01.602133200  1618117200   \n",
-       "999           1122      US      USD 1970-01-01 00:00:01.609308000  1629262800   \n",
+       "990             64      US      USD 1970-01-01 00:00:01.623214800  2021-06-18   \n",
+       "991            241      US      USD 1970-01-01 00:00:01.607493600  2021-05-26   \n",
+       "992            132      US      USD 1970-01-01 00:00:01.592110800  2021-02-09   \n",
+       "993             75      IT      EUR 1970-01-01 00:00:01.625288400  2021-07-08   \n",
+       "994            842      US      USD 1970-01-01 00:00:01.636956000  2021-12-07   \n",
+       "995           2043      US      USD 1970-01-01 00:00:01.609221600  2021-05-30   \n",
+       "996            112      US      USD 1970-01-01 00:00:01.634274000  2021-11-30   \n",
+       "997            139      IT      EUR 1970-01-01 00:00:01.636174800  2021-12-10   \n",
+       "998            374      US      USD 1970-01-01 00:00:01.602133200  2021-04-11   \n",
+       "999           1122      US      USD 1970-01-01 00:00:01.609308000  2021-08-18   \n",
        "\n",
        "     staff_pick  spotlight        category & sub-category      category  \\\n",
        "990       False       True             film & video/drama  film & video   \n",
@@ -2869,7 +2870,7 @@
        "999        food trucks        cat1        subcat1  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2884,7 +2885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2938,7 +2939,7 @@
        "      <td>CA</td>\n",
        "      <td>CAD</td>\n",
        "      <td>1970-01-01 00:00:01.581573600</td>\n",
-       "      <td>1614578400</td>\n",
+       "      <td>2021-03-01</td>\n",
        "      <td>cat1</td>\n",
        "      <td>subcat1</td>\n",
        "    </tr>\n",
@@ -2955,7 +2956,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.611554400</td>\n",
-       "      <td>1621918800</td>\n",
+       "      <td>2021-05-25</td>\n",
        "      <td>cat2</td>\n",
        "      <td>subcat2</td>\n",
        "    </tr>\n",
@@ -2972,7 +2973,7 @@
        "      <td>AU</td>\n",
        "      <td>AUD</td>\n",
        "      <td>1970-01-01 00:00:01.608184800</td>\n",
-       "      <td>1640844000</td>\n",
+       "      <td>2021-12-30</td>\n",
        "      <td>cat3</td>\n",
        "      <td>subcat3</td>\n",
        "    </tr>\n",
@@ -2989,7 +2990,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.634792400</td>\n",
-       "      <td>1642399200</td>\n",
+       "      <td>2022-01-17</td>\n",
        "      <td>cat2</td>\n",
        "      <td>subcat2</td>\n",
        "    </tr>\n",
@@ -3006,7 +3007,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.608530400</td>\n",
-       "      <td>1629694800</td>\n",
+       "      <td>2021-08-23</td>\n",
        "      <td>cat4</td>\n",
        "      <td>subcat4</td>\n",
        "    </tr>\n",
@@ -3040,7 +3041,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.609221600</td>\n",
-       "      <td>1622350800</td>\n",
+       "      <td>2021-05-30</td>\n",
        "      <td>cat1</td>\n",
        "      <td>subcat1</td>\n",
        "    </tr>\n",
@@ -3057,7 +3058,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.634274000</td>\n",
-       "      <td>1638252000</td>\n",
+       "      <td>2021-11-30</td>\n",
        "      <td>cat4</td>\n",
        "      <td>subcat4</td>\n",
        "    </tr>\n",
@@ -3074,7 +3075,7 @@
        "      <td>IT</td>\n",
        "      <td>EUR</td>\n",
        "      <td>1970-01-01 00:00:01.636174800</td>\n",
-       "      <td>1639116000</td>\n",
+       "      <td>2021-12-10</td>\n",
        "      <td>cat4</td>\n",
        "      <td>subcat4</td>\n",
        "    </tr>\n",
@@ -3091,7 +3092,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.602133200</td>\n",
-       "      <td>1618117200</td>\n",
+       "      <td>2021-04-11</td>\n",
        "      <td>cat2</td>\n",
        "      <td>subcat8</td>\n",
        "    </tr>\n",
@@ -3108,7 +3109,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>1970-01-01 00:00:01.609308000</td>\n",
-       "      <td>1629262800</td>\n",
+       "      <td>2021-08-18</td>\n",
        "      <td>cat1</td>\n",
        "      <td>subcat1</td>\n",
        "    </tr>\n",
@@ -3158,22 +3159,22 @@
        "999    canceled           1122      US      USD 1970-01-01 00:00:01.609308000   \n",
        "\n",
        "       end_date category_id subcategory_id  \n",
-       "0    1614578400        cat1        subcat1  \n",
-       "1    1621918800        cat2        subcat2  \n",
-       "2    1640844000        cat3        subcat3  \n",
-       "3    1642399200        cat2        subcat2  \n",
-       "4    1629694800        cat4        subcat4  \n",
+       "0    2021-03-01        cat1        subcat1  \n",
+       "1    2021-05-25        cat2        subcat2  \n",
+       "2    2021-12-30        cat3        subcat3  \n",
+       "3    2022-01-17        cat2        subcat2  \n",
+       "4    2021-08-23        cat4        subcat4  \n",
        "..          ...         ...            ...  \n",
-       "995  1622350800        cat1        subcat1  \n",
-       "996  1638252000        cat4        subcat4  \n",
-       "997  1639116000        cat4        subcat4  \n",
-       "998  1618117200        cat2        subcat8  \n",
-       "999  1629262800        cat1        subcat1  \n",
+       "995  2021-05-30        cat1        subcat1  \n",
+       "996  2021-11-30        cat4        subcat4  \n",
+       "997  2021-12-10        cat4        subcat4  \n",
+       "998  2021-04-11        cat2        subcat8  \n",
+       "999  2021-08-18        cat1        subcat1  \n",
        "\n",
        "[1000 rows x 14 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3186,7 +3187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
